# ventilation-system

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.TXT  README.md  build.sh  remote_picotool.cfg.sample  remote_picotool.py  remote_status.py  setup.sh  temperature_copy.py  wifi-settings-file.sample
fw/: CMakeLists.txt  leds.c  leds.h  leds.pio  lwipopts.h  main.c  mbedtls_config.h  settings.h  temperature.c  temperature.h
